--- a/FM_MyStat.Web/Views/Group/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Group/GetAll.cshtml
@@ -41,6 +41,7 @@
                                     <tr>
                                         <th>Id</th>
                                         <th>Name</th>
+                                        <th>Teacher</th>
                                         @if (@User.IsInRole("Administrator"))
                                         {
                                             <th>Edit</th>
@@ -54,6 +55,7 @@
                                         <tr>
                                             <td>@item.Id</td>
                                             <td>@item.Name</td>
+                                            <td>@item.Teacher</td>
                                             @if (@User.IsInRole("Administrator"))
                                             {
                                                 <td><a asp-controller="Group" asp-action="Update" asp-route-id="@item.Id" class="btn btn-block btn-warning btn-sm">Edit</a></td>
