--- a/FM_MyStat.Web/Views/Group/Update.cshtml
+++ b/FM_MyStat.Web/Views/Group/Update.cshtml
@@ -72,7 +72,7 @@
                                             <label for="TeacherId">Teacher</label>
                                             @if (ViewBag.TeacherList != null)
                                             {
-                                                @Html.DropDownList("TeacherID", ViewBag.TeacherList as SelectList, "-- Select Teacher --", new { @class = "form-control" })
+                                                @Html.DropDownList("TeacherId", ViewBag.TeacherList as SelectList, "-- Select Teacher --", new { @class = "form-control" })
                                             }
                                             else
                                             {
