Fix phone number validation

--- a/FM_MyStat.Web/Views/Admin/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Edit.cshtml
@@ -35,12 +35,12 @@
                                 <span class="text-danger" asp-validation-for="SurName"></span>
                             </div>
                             <div class="mb-3">
-                                <Email>Email</Email>
+                                <label>Email</label>
                                 <input asp-for="Email" type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
                                 <span class="text-danger" asp-validation-for="Email"></span>
                             </div>
                             <div class="mb-3">
-                                <label>Phone number</label>
+                                <label>Phone Number</label>
                                 <input asp-for="PhoneNumber" type="tel" class="form-control" placeholder="Phone Number" aria-label="PhoneNumber">
                                 <span class="text-danger" asp-validation-for="PhoneNumber"></span>
                             </div>
