--- a/FM_MyStat.Web/Views/Teacher/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/Edit.cshtml
@@ -35,7 +35,7 @@
                                 <span class="text-danger" asp-validation-for="SurName"></span>
                             </div>
                             <div class="mb-3">
-                                <Email>Email</Email>
+                                <label>Email</label>
                                 <input asp-for="Email" type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
                                 <span class="text-danger" asp-validation-for="Email"></span>
                             </div>
