--- a/FM_MyStat.Web/Views/Homework/Create.cshtml
+++ b/FM_MyStat.Web/Views/Homework/Create.cshtml
@@ -57,6 +57,7 @@
                                     <div class="card-body">
                                         <div class="form-group">
                                             <label for="title">Title</label>
+                                            <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
                                             <input type="text" name="title" class="form-control" id="title" placeholder="Enter Title">
                                         </div>
                                         <div class="form-group">
