--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -154,6 +154,39 @@
 
                     </ul>
                 </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-comments"></i>
+                        <p>
+                            News
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a asp-controller="News" asp-action="GetAll" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All news (DO NOT PRESS THIS BUTTON IF YOU ARE SPREADING THE SCREEN)</p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a asp-controller="News" asp-action="ManageNews" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Manage news</p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a asp-controller="News" asp-action="Create" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Add news</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
