--- a/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/AdminDashboard/_SideBar.cshtml
@@ -167,7 +167,7 @@
                         <li class="nav-item">
                             <a asp-controller="News" asp-action="GetAll" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>All news (DO NOT PRESS THIS BUTTON IF YOU ARE SPREADING THE SCREEN)</p>
+                                <p>All news</p>
                             </a>
                         </li>
 
