--- a/FM_MyStat.Web/Views/Student/Index.cshtml
+++ b/FM_MyStat.Web/Views/Student/Index.cshtml
@@ -110,6 +110,30 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">News academy</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="list-group">
+                            @for (int i = 0; i < Model.NewsList.Count; i++)
+                            {
+                                var news = Model.NewsList[i];
+                                <a href="#" class="list-group-item list-group-item-action">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div>
+                                            <h5 class="mb-1">@(i + 1). @news.Title @news.Description @news.Time @news.TimePublication</h5>
+                                        </div>
+                                    </div>
+                                </a>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
