navbar and sidebar rework 1

--- a/FM_MyStat.Web/wwwroot/css/site.css
+++ b/FM_MyStat.Web/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    background-color: #eef0ff;
 }
 
 @media (min-width: 768px) {
@@ -18,5 +19,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color:#eef0ff;
 }
