--- a/FM_MyStat.Web/Views/Student/Create.cshtml
+++ b/FM_MyStat.Web/Views/Student/Create.cshtml
@@ -45,7 +45,7 @@
                         <div class="col-md-5 offset-3">
                             <div class="card card-primary">
                                 <div class="card-header">
-                                    <h3 class="card-title">New teacher</h3>
+                                    <h3 class="card-title">New student</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
