--- a/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
+++ b/FM_MyStat.Web/Views/Shared/StudentDashboard/_NavBar.cshtml
@@ -10,35 +10,71 @@
     var user = await UserManager.GetUserAsync(User);
     var dashboardInfo = (await StudentService.GetDashboardStudentInfo(user.Id)).Payload;
 }
+
+<style>
+    .nb_c {
+        background: rgb(52,79,126);
+        background: linear-gradient(38deg, rgba(52,79,126,1) 45%, rgba(47,31,87,1) 100%, rgba(32,48,76,1) 100%);
+    }
+
+    .button-28 {
+        background-color: #fff;
+        border: 0 solid #e2e8f0;
+        border-radius: 1.5rem;
+        box-sizing: border-box;
+        color: #0d172a;
+        cursor: pointer;
+        display: inline-block;
+        font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        font-size: 1.1rem;
+        font-weight: 600;
+        line-height: 1;
+        padding: 1rem 1.6rem;
+        text-align: center;
+        text-decoration: none #0d172a solid;
+        text-decoration-thickness: auto;
+        transition: all .1s cubic-bezier(.4, 0, .2, 1);
+        box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+    }
+
+        .button-28:hover {
+            background-color: #1e293b;
+            color: #fff;
+        }
+
+</style>
 <!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="main-header navbar navbar-expand navbar-white navbar-light nb_c">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a asp-controller="Student"  asp-action="Index" class="nav-link">Home</a>
+            <a asp-controller="Student"  asp-action="Index" class="nav-link" style="color:white">Home</a>
         </li>
     </ul>
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
         <li class="nav-item ml-2">
-            <span class="nav-link">Welcome, @dashboardInfo.StudentInfo.FirstName @dashboardInfo.StudentInfo.SurName @dashboardInfo.StudentInfo.LastName</span>
+            <span class="nav-link" style="color:white">Welcome, @dashboardInfo.StudentInfo.FirstName @dashboardInfo.StudentInfo.SurName @dashboardInfo.StudentInfo.LastName</span>
         </li>
         <li class="nav-item ml-2">
-            <span class="nav-link">Group: @dashboardInfo.Group</span>
+            <span class="nav-link" style="color:white">Group: @dashboardInfo.Group</span>
         </li>
         <li class="nav-item ml-2">
-            <span class="nav-link">Points: @dashboardInfo.StudentInfo.Rating ★</span>
+            <span class="nav-link" style="color:white">Points: @dashboardInfo.StudentInfo.Rating ★</span>
         </li>
         <li class="nav-item">
-            <a asp-controller="Student" asp-action="Profile" asp-route-id="@user.Id" class="btn btn-primary">Profile</a>
+            <a asp-controller="Student" asp-action="Profile" asp-route-id="@user.Id" class="button-28">Profile</a>
         </li>
         <li class="nav-item ml-2">
             <form method="post" asp-controller="Student" asp-action="LogOut">
-                <button class="btn btn-primary" type="submit">Log out</button>
+                <button class="button-28" type="submit">Log out</button>
             </form>
         </li>
     </ul>
